--- a/src/content/blog/05-mdx-syntax/index.mdx
+++ b/src/content/blog/05-mdx-syntax/index.mdx
@@ -64,8 +64,7 @@ By default Micro has zero frameworks installed. If you install a framework, comp
 ---
 
 ## More Links
-
-- [MDX Syntax Documentation](https://mdxjs.com/docs/what-is-mdx)
+- <a href="https://mdxjs.com/docs/what-is-mdx" target="_blank">MDX Syntax Documentation</a>
 - [Astro Framework Integrations](https://docs.astro.build/en/guides/integrations-guide)
 - [Astro Usage Documentation](https://docs.astro.build/en/guides/markdown-content/#markdown-and-mdx-pages)
 - [Client Directives](https://docs.astro.build/en/reference/directives-reference/#client-directives)
