--- a/src/content/blog/00-not-always-a-caveman/index.mdx
+++ b/src/content/blog/00-not-always-a-caveman/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Everything new in Astro Micro"
+title: "I have not always been a caveman"
 description: "Features, enhancements, and changes."
 date: "2024-05-09"
 ---
@@ -8,13 +8,30 @@ import Callout from "@/components/Callout.astro";
 
 ---
 
-## Pagefind search 🔎
+## In fact, I was a regular peop
+
+You may have read that and thought - hmm, I'm not like that - and maybe that is true. 
+But the landscape for finding truth has changed. Truth is a lie - and a lie is the truth.
+Things are updside down.
+
+## Take the food pyramid 🔎
+
+Turn it upside down. Now really.
+
+Carbs, did you know, are the only macronutrient you don't _have to have_. 
+
+But the powers that be, who wrote the pyramid, is influenced (captured some may say) by big corps. 
+
+Money is in the carbs - processed food - flour, sugar, seed oils. As a bonus at the tail end, when you have diabetes from a 
+lifetime of corn pops, you are in need of insulin. 
+
+The best portfolios have 1) big food and 2) big pharma. It is that simple.
 
 [Pagefind](https://pagefind.app) is a search library for static websites. Micro uses [Sergey Shishkin's](https://github.com/shishkin) [astro-pagefind](https://github.com/shishkin/astro-pagefind) integration. This integration simplifies development and does not require any changes to the default build script.
 
 Press <kbd>/</kbd> or <kbd>CTRL</kbd> + <kbd>K</kbd> to open the search dialog. For Mac users, <kbd>⌘</kbd> + <kbd>K</kbd> can also be used. To dismiss the search dialog, press <kbd>Esc</kbd> or click on an area outside the component.
 
-### Build and develop
+### Build and develop 📀
 
 <Callout type="error">
   The site **must** be built at least once so Pagefind can index the content.
