--- a/src/content/blog/00-not-always-a-caveman/index.mdx
+++ b/src/content/blog/00-not-always-a-caveman/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "I have not always been a caveman"
-description: "Features, enhancements, and changes."
+description: "Just software guy who had bypass surgery"
 date: "2024-05-09"
 ---
 
