caveman's guide title

--- a/src/content/blog/00-not-always-a-caveman/index.mdx
+++ b/src/content/blog/00-not-always-a-caveman/index.mdx
@@ -8,15 +8,19 @@ import Callout from "@/components/Callout.astro";
 
 ---
 
-## In fact, I was a regular peop
+## In fact, I am a regular, modern peop
 
-You may have read that and thought - hmm, I'm not like that - and maybe that is true. 
-But the landscape for finding truth has changed. Truth is a lie - and a lie is the truth.
+The landscape for finding truth has changed. Truth is a lie - and a lie is the truth.
 Things are updside down.
+
+I will try to dispell what I've learned - and what I think I've learned. It is a journey 
+that I think anyone can benefit from. 
+
+Question everything.
 
 ## Take the food pyramid 🔎
 
-Turn it upside down. Now really.
+Turn it upside down - and live happily ever after. No really.
 
 Carbs, did you know, are the only macronutrient you don't _have to have_. 
 
@@ -27,6 +31,7 @@ lifetime of corn pops, you are in need of insulin.
 
 The best portfolios have 1) big food and 2) big pharma. It is that simple.
 
+{/* 
 [Pagefind](https://pagefind.app) is a search library for static websites. Micro uses [Sergey Shishkin's](https://github.com/shishkin) [astro-pagefind](https://github.com/shishkin/astro-pagefind) integration. This integration simplifies development and does not require any changes to the default build script.
 
 Press <kbd>/</kbd> or <kbd>CTRL</kbd> + <kbd>K</kbd> to open the search dialog. For Mac users, <kbd>⌘</kbd> + <kbd>K</kbd> can also be used. To dismiss the search dialog, press <kbd>Esc</kbd> or click on an area outside the component.
@@ -108,4 +113,4 @@ When developing you can continue to use `npm run dev` and Pagefind will use the 
 ## Issues ⚠️
 
 - Pagefind requires a refresh to function when ViewTransitions is enabled
-- ToC links are obscured by Header when scrolled to
+- ToC links are obscured by Header when scrolled to */}
